--- a/package.json
+++ b/package.json
@@ -2,21 +2,22 @@
   "name": "json-api-test",
   "packageManager": "yarn@3.0.1",
   "version": "1.0.0",
-  "main": "src/server.js",
+  "main": "src/index.js",
   "languageName": "node",
   "repository": "git@github.com:nekdolan/json-api-test.git",
   "author": "trinimac <trinimac@protonmail.com>",
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "node ./src/server.js",
+    "start": "node ./src/index.js",
     "test": "jest"
-  },
-  "installConfig": {
-    "pnp": true
   },
   "dependencies": {
     "express": "^4.17.1",
     "src": "link:./src"
+  },
+  "devDependencies": {
+    "jest": "^27.2.2",
+    "node-fetch": "2.6.2"
   }
 }
